--- a/plugin/locale/cs/LC_MESSAGES/HdmiTest.po
+++ b/plugin/locale/cs/LC_MESSAGES/HdmiTest.po
@@ -122,7 +122,7 @@ msgstr ""
 msgid "Addressed to"
 msgstr ""
 
-msgid "HdmiTest - Received"
+msgid "HdmiTest - received"
 msgstr ""
 
 msgid "Standby TV"
@@ -140,5 +140,5 @@ msgstr ""
 msgid "OK"
 msgstr ""
 
-msgid "Testing HDMI-CEC"
+msgid "Monitoring and testing HDMI-CEC"
 msgstr ""
