Added option to menu for toggle between history or one command only

--- a/plugin/locale/cs/LC_MESSAGES/HdmiTest.po
+++ b/plugin/locale/cs/LC_MESSAGES/HdmiTest.po
@@ -140,5 +140,8 @@ msgstr ""
 msgid "OK"
 msgstr ""
 
+msgid "Command history in main screen"
+msgstr ""
+
 msgid "Monitoring and testing HDMI-CEC"
 msgstr ""
