--- a/plugin/locale/HdmiTest.pot
+++ b/plugin/locale/HdmiTest.pot
@@ -143,5 +143,8 @@ msgstr ""
 msgid "OK"
 msgstr ""
 
+msgid "Command history in main screen"
+msgstr ""
+
 msgid "Monitoring and testing HDMI-CEC"
 msgstr ""
