--- a/plugin/locale/cs/LC_MESSAGES/HdmiTest.po
+++ b/plugin/locale/cs/LC_MESSAGES/HdmiTest.po
@@ -5,14 +5,14 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-27 16:01+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: ims <ims21@users.sourceforge.net>\n"
+"Last-Translator: IMS <ims@openpli.org>\n"
 "Language-Team: PLi <ims21@users.sourceforge.net>\n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Poedit 1.5.4\n"
+"X-Generator: Poedit 3.3.2\n"
 
 msgid "TV (0x00)"
 msgstr ""
@@ -48,16 +48,16 @@ msgid "Recording device 3 (0x09))"
 msgstr ""
 
 msgid "Reserved (0x0a))"
-msgstr ""
+msgstr "Rezervováno (0x0a))"
 
 msgid "Reserved (0x0b))"
-msgstr ""
+msgstr "Rezervováno (0x0b))"
 
 msgid "Reserved (0x0c))"
-msgstr ""
+msgstr "Rezervováno (0x0c))"
 
 msgid "Reserved (0x0d))"
-msgstr ""
+msgstr "Rezervováno (0x0d))"
 
 msgid "Free (0x0e))"
 msgstr ""
@@ -66,34 +66,34 @@ msgid "None"
 msgstr ""
 
 msgid "Disable numeric hotkeys"
-msgstr ""
+msgstr "Zakázat číselné zkratky"
 
 msgid "Disable all hotkeys"
-msgstr ""
+msgstr "Zakázat všechny hotkeys"
 
 msgid "Disable HDMI-CEC plugin"
-msgstr ""
+msgstr "Zakázat HDMI-CEC plugin"
 
 msgid "Disable HDMI-CEC plugin and Num"
-msgstr ""
+msgstr "Zakázat HDMI-CEC plugin a číselné zkratky"
 
 msgid "Disable all"
-msgstr ""
+msgstr "Zakázat vše"
 
 msgid "HdmiTest"
 msgstr ""
 
 msgid "Send"
-msgstr ""
+msgstr "Odeslat"
 
 msgid "Cancel"
-msgstr ""
+msgstr "Zavřít"
 
 msgid "Monitor"
 msgstr ""
 
 msgid "Wakeup TV"
-msgstr ""
+msgstr "Probudit TV"
 
 msgid "Tx:"
 msgstr ""
@@ -102,10 +102,10 @@ msgid "Rx:"
 msgstr ""
 
 msgid "Command"
-msgstr ""
+msgstr "Příkaz"
 
 msgid "Real physical address"
-msgstr ""
+msgstr "Skutečná fyzická adresa"
 
 msgid "HH"
 msgstr ""
@@ -120,28 +120,28 @@ msgid "LL"
 msgstr ""
 
 msgid "Addressed to"
-msgstr ""
+msgstr "Adresováno pro"
 
 msgid "HdmiTest - received"
-msgstr ""
+msgstr "HdmiTest - přijato"
 
 msgid "Standby TV"
 msgstr ""
 
 msgid "HdmiTest - options"
-msgstr ""
+msgstr "HdmiTest - možnosti"
 
 msgid "Test mode"
-msgstr ""
+msgstr "Testovací režim"
 
 msgid "Special settings"
-msgstr ""
+msgstr "Speciální nastavení"
 
 msgid "OK"
 msgstr ""
 
 msgid "Command history in main screen"
-msgstr ""
+msgstr "Historie příkazů na hlavní obrazovce"
 
 msgid "Monitoring and testing HDMI-CEC"
-msgstr ""
+msgstr "Monitorování a tstování HDMI-CEC"
