--- a/plugin/locale/nl/LC_MESSAGES/HdmiTest.po
+++ b/plugin/locale/nl/LC_MESSAGES/HdmiTest.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-06 14:44+0200\n"
-"PO-Revision-Date: 2023-07-06 10:04+0200\n"
+"PO-Revision-Date: 2023-07-06 15:32+0200\n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: \n"
 "Language: nl\n"
@@ -23,6 +23,9 @@ msgid ""
 "'5'\tClear\n"
 "'7/9'\tSource active/inactive"
 msgstr ""
+"'0/1'\tStand-by/Ontwaak\n"
+"'5'\tClear\n"
+"'7/9'\tBron actief/inactief"
 
 #: ../ui.py:271
 msgid "Addressed to"
@@ -113,41 +116,34 @@ msgid "OK"
 msgstr "Ok"
 
 #: ../ui.py:263 ../ui.py:269
-#, fuzzy
 msgid "Physical address:"
-msgstr "Echte fysieke adres"
+msgstr "Fysiek adres:"
 
 #: ../ui.py:77
-#, fuzzy
 msgid "Playback Device 1 (0x04)"
-msgstr "Opname-apparaat 1 (0x01)"
+msgstr "Afspeel-apparaat 1 (0x01)"
 
 #: ../ui.py:81
-#, fuzzy
 msgid "Playback Device 2 (0x08)"
-msgstr "Opname-apparaat 2 (0x02)"
+msgstr "Afspeel-apparaat 2 (0x02)"
 
 #: ../ui.py:84
-#, fuzzy
 msgid "Playback Device 3 (0x0b))"
-msgstr "Opname-apparaat 3 (0x09)"
+msgstr "Afspeel-apparaat 3 (0x09)"
 
 #: ../ui.py:260
 msgid "Real physical address"
 msgstr "Echte fysieke adres"
 
 #: ../ui.py:74
-#, fuzzy
 msgid "Recording Device 1 (0x01)"
 msgstr "Opname-apparaat 1 (0x01)"
 
 #: ../ui.py:75
-#, fuzzy
 msgid "Recording Device 2 (0x02)"
 msgstr "Opname-apparaat 2 (0x02)"
 
 #: ../ui.py:82
-#, fuzzy
 msgid "Recording Device 3 (0x09))"
 msgstr "Opname-apparaat 3 (0x09)"
 
@@ -169,16 +165,15 @@ msgstr "Zend"
 
 #: ../ui.py:272 ../ui.py:278 ../ui.py:291
 msgid "Send to address:"
-msgstr ""
+msgstr "Zend naar adres:"
 
 #: ../ui.py:592
 msgid "Special settings"
 msgstr "Bijzondere instellingen"
 
 #: ../ui.py:87
-#, fuzzy
 msgid "Specific Use (0x0e))"
-msgstr "Beschikbaar (0x0e))"
+msgstr "Specifiek gebruik (0x0e))"
 
 #: ../ui.py:518
 msgid "Standby TV"
@@ -193,24 +188,20 @@ msgid "Test mode"
 msgstr "Testmodus"
 
 #: ../ui.py:76
-#, fuzzy
 msgid "Tuner 1 (0x03)"
-msgstr "STB 1 (0x03)"
+msgstr "Tuner 1 (0x03)"
 
 #: ../ui.py:79
-#, fuzzy
 msgid "Tuner 2 (0x06)"
-msgstr "STB 2 (0x06)"
+msgstr "Tuner 2 (0x06)"
 
 #: ../ui.py:80
-#, fuzzy
 msgid "Tuner 3 (0x07)"
-msgstr "STB 3 (0x07)"
+msgstr "Tuner 3 (0x07)"
 
 #: ../ui.py:83
-#, fuzzy
 msgid "Tuner 4 (0x0a))"
-msgstr "Gereserveerd (0x0a))"
+msgstr "Tuner 4 (0x0a))"
 
 #: ../ui.py:239
 msgid "Tx:"
